src/snapshots/Hed2__parser__tests__lines_to_text.snap
---
source: src/parser.rs
expression: text
snapshot_kind: text
---
#    comment

1.1.1.1 a.com c.com b.com f.com e.com h.com g.com i.com k.com j.com
1.1.1.1 l.com m.com n.com o.com
# 1.1.1.1 1.com 2.com 3.com 4.com 5.com 6.com 7.com 8.com 9.com 10.com
# 1.1.1.1 11.com 13.com

# comment
# comment
# comment
# comment
# comment

2402:1200:4f00:1234:0000:5678:9abc:def0 b.com

4.4.4.4
# 4.4.4.4

#[foo]
3.3.3.3 a.com e.com d.com
# 3.3.3.3 b.com

5.5.5.5 a.com
#[foo]

#abcdefg

3.3.3.3 c.com

5.5.5.5 a.com c.com

#[Another Group]
2.2.2.2 foo.com
# 2.2.2.2 bar.com
#[Another Group]
