src/snapshots/Hed2__parser__tests__lines_to_text_human.snap
---
source: src/parser.rs
expression: text
snapshot_kind: text
---
#    comment

1.1.1.1 foo.com

#   中文内容
127.0.0.1 a.com c.com b.com f.com e.com h.com g.com i.com k.com j.com
127.0.0.1 l.com m.com n.com o.com
# 127.0.0.1 1.com 2.com 3.com 4.com 5.com 6.com 7.com 8.com 9.com 10.com
# 127.0.0.1 11.com 13.com

# comment
# comment
# comment
# comment
# comment

2402:1200:4f00:1234:0000:5678:9abc:def0 b.com

4.4.4.4
# 4.4.4.4

#[foo]

#[bar]
3.3.3.3 a.com
# 3.3.3.3 b.com

#[bar]
#[baz]

#[foo]

#[bar]
5.5.5.5 a.com

#abcdefg

2.2.2.2 foo.com
# 2.2.2.2 bar.com
