src/snapshots/Hed2__parser__tests__lines_to_text_unix.snap
---
source: src/parser.rs
expression: text
snapshot_kind: text
---
"#    comment\n\n1.1.1.1 foo.com\n\n#   中文内容\n127.0.0.1 a.com c.com b.com f.com e.com h.com g.com i.com k.com j.com\n127.0.0.1 l.com m.com n.com o.com\n# 127.0.0.1 1.com 2.com 3.com 4.com 5.com 6.com 7.com 8.com 9.com 10.com\n# 127.0.0.1 11.com 13.com\n\n# comment\n# comment\n# comment\n# comment\n# comment\n\n2402:1200:4f00:1234:0000:5678:9abc:def0 b.com\n\n# 4.4.4.4\n# 4.4.4.4\n\n#[foo]\n\n#[bar]\n3.3.3.3 a.com\n# 3.3.3.3 b.com\n\n#[bar]\n#[baz]\n\n#[foo]\n\n#[bar]\n5.5.5.5 a.com\n\n2.2.2.2 foo.com\n# 2.2.2.2 bar.com\n"
