src/snapshots/Hed2__parser__tests__lines_to_text_win.snap
---
source: src/parser.rs
expression: text
snapshot_kind: text
---
"#    comment\r\n\r\n1.1.1.1 foo.com\r\n\r\n#   中文内容\r\n127.0.0.1 a.com c.com b.com f.com e.com h.com g.com i.com k.com j.com\r\n127.0.0.1 l.com m.com n.com o.com\r\n# 127.0.0.1 1.com 2.com 3.com 4.com 5.com 6.com 7.com 8.com 9.com 10.com\r\n# 127.0.0.1 11.com 13.com\r\n\r\n# comment\r\n# comment\r\n# comment\r\n# comment\r\n# comment\r\n\r\n2402:1200:4f00:1234:0000:5678:9abc:def0 b.com\r\n\r\n4.4.4.4\r\n# 4.4.4.4\r\n\r\n#[foo]\r\n\r\n#[bar]\r\n3.3.3.3 a.com\r\n# 3.3.3.3 b.com\r\n\r\n#[bar]\r\n#[baz]\r\n\r\n#[foo]\r\n\r\n#[bar]\r\n5.5.5.5 a.com\r\n\r\n#abcdefg\r\n\r\n2.2.2.2 foo.com\r\n# 2.2.2.2 bar.com\r\n"
