src/snapshots/Hed2__parser__tests__list_to_lines.snap
---
source: src/parser.rs
expression: new_lines
snapshot_kind: text
---
[
    Empty,
    Empty,
    Empty,
    Empty,
    Other(
        "#    comment",
    ),
    Empty,
    Valid {
        ip: "1.1.1.1",
        hosts: [
            "a.com",
            "c.com",
            "b.com",
            "f.com",
            "e.com",
            "h.com",
            "g.com",
            "i.com",
            "k.com",
            "j.com",
        ],
        enabled: true,
    },
    Valid {
        ip: "1.1.1.1",
        hosts: [
            "l.com",
            "m.com",
            "n.com",
            "o.com",
        ],
        enabled: true,
    },
    Valid {
        ip: "1.1.1.1",
        hosts: [
            "1.com",
            "2.com",
            "3.com",
            "4.com",
            "5.com",
            "6.com",
            "7.com",
            "8.com",
            "9.com",
            "10.com",
        ],
        enabled: false,
    },
    Valid {
        ip: "1.1.1.1",
        hosts: [
            "11.com",
            "13.com",
        ],
        enabled: false,
    },
    Empty,
    Empty,
    Empty,
    Empty,
    Other(
        "# comment",
    ),
    Other(
        "# comment",
    ),
    Other(
        "# comment",
    ),
    Other(
        "# comment",
    ),
    Other(
        "# comment",
    ),
    Empty,
    Empty,
    Empty,
    Empty,
    Valid {
        ip: "2402:1200:4f00:1234:0000:5678:9abc:def0",
        hosts: [
            "b.com",
        ],
        enabled: true,
    },
    Empty,
    Empty,
    Other(
        "4.4.4.4",
    ),
    Other(
        "# 4.4.4.4",
    ),
    Empty,
    Group(
        "foo",
    ),
    Empty,
    Group(
        "bar",
    ),
    Valid {
        ip: "3.3.3.3",
        hosts: [
            "c.com",
        ],
        enabled: true,
    },
    Empty,
    Empty,
    Group(
        "bar",
    ),
    Empty,
    Group(
        "foo",
    ),
    Empty,
    Other(
        "#abcdefg",
    ),
    Empty,
    Group(
        "foo",
    ),
    Empty,
    Valid {
        ip: "5.5.5.5",
        hosts: [
            "a.com",
            "c.com",
        ],
        enabled: true,
    },
    Group(
        "foo",
    ),
    Empty,
    Group(
        "System",
    ),
    Empty,
    Group(
        "System",
    ),
    Empty,
    Group(
        "baz",
    ),
    Empty,
    Empty,
    Group(
        "foo",
    ),
    Empty,
    Group(
        "foo",
    ),
    Empty,
    Valid {
        ip: "2.2.2.2",
        hosts: [
            "foo.com",
        ],
        enabled: true,
    },
    Valid {
        ip: "2.2.2.2",
        hosts: [
            "bar.com",
        ],
        enabled: false,
    },
]
