src/snapshots/Hed2__parser__tests__text_to_groups.snap
---
source: src/parser.rs
expression: groups
snapshot_kind: text
---
[
    Group {
        name: "System",
        text: "\n\n\n\n   #    comment  \n\n    1.1.1.1 foo.com  \n    # 1.1.1.1 bar.com         \n\n         #   中文内容                    \n#    127.0.0.1 1.com 2.com 3.com 4.com 5.com 6.com 7.com 8.com 9.com 10.com\n\n127.0.0.1 a.com    c.com     b.com f.com   e.com h.com  g.com i.com  k.com j.com l.com m.com   n.com#     ##     comment \n\n# comment\n# comment\n# comment\n# comment\n# comment\n\n# 127.0.0.1 11.com 12.com\n\n\n           2402:1200:4f00:1234:0000:5678:9abc:def0   b.com  \n\n\n4.4.4.4    \n# 4.4.4.4 \n\n#[foo]    \n\n#[bar]\n  3.3.3.3 a.com\n\n  #   3.3.3.3 b.com\n#[bar]\n#[baz]\n\n#[foo]      \n\n#[bar]\n5.5.5.5 a.com\n\n#abcdefg\n",
        list: [
            Item {
                ip: "1.1.1.1",
                hosts: [
                    Host {
                        content: "foo.com",
                        enabled: true,
                    },
                    Host {
                        content: "bar.com",
                        enabled: false,
                    },
                ],
                group: "System",
            },
            Item {
                ip: "127.0.0.1",
                hosts: [
                    Host {
                        content: "1.com",
                        enabled: false,
                    },
                    Host {
                        content: "2.com",
                        enabled: false,
                    },
                    Host {
                        content: "3.com",
                        enabled: false,
                    },
                    Host {
                        content: "4.com",
                        enabled: false,
                    },
                    Host {
                        content: "5.com",
                        enabled: false,
                    },
                    Host {
                        content: "6.com",
                        enabled: false,
                    },
                    Host {
                        content: "7.com",
                        enabled: false,
                    },
                    Host {
                        content: "8.com",
                        enabled: false,
                    },
                    Host {
                        content: "9.com",
                        enabled: false,
                    },
                    Host {
                        content: "10.com",
                        enabled: false,
                    },
                    Host {
                        content: "a.com",
                        enabled: true,
                    },
                    Host {
                        content: "c.com",
                        enabled: true,
                    },
                    Host {
                        content: "b.com",
                        enabled: true,
                    },
                    Host {
                        content: "f.com",
                        enabled: true,
                    },
                    Host {
                        content: "e.com",
                        enabled: true,
                    },
                    Host {
                        content: "h.com",
                        enabled: true,
                    },
                    Host {
                        content: "g.com",
                        enabled: true,
                    },
                    Host {
                        content: "i.com",
                        enabled: true,
                    },
                    Host {
                        content: "k.com",
                        enabled: true,
                    },
                    Host {
                        content: "j.com",
                        enabled: true,
                    },
                    Host {
                        content: "l.com",
                        enabled: true,
                    },
                    Host {
                        content: "m.com",
                        enabled: true,
                    },
                    Host {
                        content: "n.com",
                        enabled: true,
                    },
                    Host {
                        content: "11.com",
                        enabled: false,
                    },
                    Host {
                        content: "12.com",
                        enabled: false,
                    },
                ],
                group: "System",
            },
            Item {
                ip: "2402:1200:4f00:1234:0000:5678:9abc:def0",
                hosts: [
                    Host {
                        content: "b.com",
                        enabled: true,
                    },
                ],
                group: "System",
            },
            Item {
                ip: "3.3.3.3",
                hosts: [
                    Host {
                        content: "a.com",
                        enabled: true,
                    },
                    Host {
                        content: "b.com",
                        enabled: false,
                    },
                ],
                group: "System",
            },
            Item {
                ip: "5.5.5.5",
                hosts: [
                    Host {
                        content: "a.com",
                        enabled: true,
                    },
                ],
                group: "System",
            },
        ],
    },
    Group {
        name: "foo",
        text: "#[bar]\r\n3.3.3.3 a.com\r\n\r\n# 3.3.3.3 b.com\r\n#[bar]\r\n#[baz]\r\n",
        list: [
            Item {
                ip: "3.3.3.3",
                hosts: [
                    Host {
                        content: "a.com",
                        enabled: true,
                    },
                    Host {
                        content: "b.com",
                        enabled: false,
                    },
                ],
                group: "foo",
            },
        ],
    },
]
