src/snapshots/Hed2__parser__tests__text_to_lines.snap
---
source: src/parser.rs
expression: lines
snapshot_kind: text
---
[
    Empty,
    Empty,
    Empty,
    Empty,
    Other(
        "#    comment",
    ),
    Empty,
    Valid {
        ip: "1.1.1.1",
        hosts: [
            "foo.com",
        ],
        enabled: true,
    },
    Valid {
        ip: "1.1.1.1",
        hosts: [
            "bar.com",
        ],
        enabled: false,
    },
    Empty,
    Other(
        "#   中文内容",
    ),
    Valid {
        ip: "127.0.0.1",
        hosts: [
            "1.com",
            "2.com",
            "3.com",
            "4.com",
            "5.com",
            "6.com",
            "7.com",
            "8.com",
            "9.com",
            "10.com",
        ],
        enabled: false,
    },
    Empty,
    Valid {
        ip: "127.0.0.1",
        hosts: [
            "a.com",
            "c.com",
            "b.com",
            "f.com",
            "e.com",
            "h.com",
            "g.com",
            "i.com",
            "k.com",
            "j.com",
            "l.com",
            "m.com",
            "n.com",
        ],
        enabled: true,
    },
    Empty,
    Other(
        "# comment",
    ),
    Other(
        "# comment",
    ),
    Other(
        "# comment",
    ),
    Other(
        "# comment",
    ),
    Other(
        "# comment",
    ),
    Empty,
    Valid {
        ip: "127.0.0.1",
        hosts: [
            "11.com",
            "12.com",
        ],
        enabled: false,
    },
    Empty,
    Empty,
    Valid {
        ip: "2402:1200:4f00:1234:0000:5678:9abc:def0",
        hosts: [
            "b.com",
        ],
        enabled: true,
    },
    Empty,
    Empty,
]
